[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=3.4"]
build-backend = "setuptools.build_meta"

# Enable setuptools_scm to compute the version number from the most recent tag
# https://github.com/pypa/setuptools_scm/#pyprojecttoml-usage
[tool.setuptools_scm]

[tool.ruff]
select = [
    "E",    # pycodestyle errrors
    "F",    # pyflakes
    "B",    # flake8-bugbear
    "I",    # isort
    "PLE",  # pylint errors
    # "UP",   # pyUpgrade
    "FLY",  # flynt
]
ignore = ["B905", "B008", "B006"]
line-length = 120
src = ["src", "tests"]
exclude = ["src/diracx/client/"]

[tool.isort]
profile = "black"

[tool.ruff.flake8-bugbear]
# Allow default arguments like, e.g., `data: List[str] = fastapi.Query(None)`.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Path", "fastapi.Body", "fastapi.Header"]

[tool.mypy]
plugins = ["sqlalchemy.ext.mypy.plugin", "pydantic.mypy"]
exclude = ["^src/diracx/client", "^tests/", "^build/"]
allow_redefinition = true
# strict = true
enable_error_code = ["import", "attr-defined"]

[[tool.mypy.overrides]]
module = 'DIRAC.*'
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = 'authlib.*'
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = ["-v", "--cov=diracx", "--cov-report=term-missing"]
asyncio_mode = "auto"
