[project]
name = "diracx"
description = "Client installation for users of DiracX installations"
readme = "README.md"
requires-python = ">=3.10"
keywords = []
license = {text = "GPL-3.0-only"}
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Distributed Computing",
]
dependencies = [
    "diracx-api",
    "diracx-cli",
    "diracx-client",
    "diracx-core",
]
dynamic = ["version"]

[project.optional-dependencies]
testing = [
    "diracx-testing",
]

[tool.setuptools]
packages = []

[build-system]
requires = ["setuptools>=61", "wheel", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.ruff]
select = [
    "E",    # pycodestyle errrors
    "F",    # pyflakes
    "B",    # flake8-bugbear
    "I",    # isort
    "PLE",  # pylint errors
    # "UP",   # pyUpgrade
    "FLY",  # flynt
]
ignore = ["B905", "B008", "B006"]
line-length = 120
src = ["diracx-*/src", "diracx-*/tests"]
exclude = ["diracx-client/src/diracx/client/"]

[tool.isort]
profile = "black"

[tool.ruff.flake8-bugbear]
# Allow default arguments like, e.g., `data: List[str] = fastapi.Query(None)`.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Path", "fastapi.Body", "fastapi.Header"]

[tool.mypy]
files = [
    "diracx-api/src/**/*.py",
    "diracx-cli/src/**/*.py",
    "diracx-client/src/**/_patch.py",
    "diracx-core/src/**/*.py",
    "diracx-db/src/**/*.py",
    "diracx-routers/src/**/*.py",
]
mypy_path = [
    "$MYPY_CONFIG_FILE_DIR/diracx-api/src",
    "$MYPY_CONFIG_FILE_DIR/diracx-cli/src",
    "$MYPY_CONFIG_FILE_DIR/diracx-client/src",
    "$MYPY_CONFIG_FILE_DIR/diracx-core/src",
    "$MYPY_CONFIG_FILE_DIR/diracx-db/src",
    "$MYPY_CONFIG_FILE_DIR/diracx-routers/src",
]
plugins = ["sqlalchemy.ext.mypy.plugin", "pydantic.mypy"]
allow_redefinition = true
explicit_package_bases = true
# disallow_untyped_defs = true
# strict = true
enable_error_code = ["import", "attr-defined"]

[[tool.mypy.overrides]]
module = 'DIRAC.*'
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = 'authlib.*'
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = [
    "diracx-api/tests",
    "diracx-cli/tests",
    "diracx-client/tests",
    "diracx-core/tests",
    "diracx-db/tests",
    "diracx-routers/tests",
]
addopts = [
    "-v",
    "--cov=diracx", "--cov-report=term-missing",
    "-pdiracx.testing", "-pdiracx.testing.osdb",
    "--import-mode=importlib",
]
asyncio_mode = "auto"
