[metadata]
name = diracx
author = DIRAC consortium
description = DiracX is the nextGen implementation of DIRAC (https://github.com/DIRACGrid/DIRAC/)
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/DIRACGrid/diracx
license = GPL-3.0-only
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering
    Topic :: System :: Distributed Computing
# keywords = CPAN PyPI distutils eggs package management
# project_urls =
# 	Documentation = https://setuptools.pypa.io/
# 	Changelog = https://setuptools.pypa.io/en/stable/history.html

[options]
packages = find_namespace:
package_dir =
    = src
python_requires = >=3.10
install_requires =
	aiobotocore
	authlib
	aiohttp
	aiomysql
	aiosqlite
	azure-core
	cachetools
	m2crypto >=0.38.0
	importlib_resources
	email-validator
	fastapi
	gitpython
	httpx
	isodate
	mypy
	opensearch-py
	pydantic ==1.10.13
	python-dotenv
	python-jose
	python-multipart
	pyyaml
	requests
	rich
	sqlalchemy
	typer
	types-cachetools
	types-PyYAML
	types-requests
	uvicorn


[options.packages.find]
where = src

[options.extras_require]
testing =
	pytest >= 6

testing-integration =
	pytest

docs =
	sphinx >= 3.5

[options.entry_points]
console_scripts =
    dirac = diracx.cli:app
diracx =
	properties_module = diracx.core:properties
diracx.db.sql =
	AuthDB = diracx.db.sql:AuthDB
	JobDB = diracx.db.sql:JobDB
	JobLoggingDB = diracx.db.sql:JobLoggingDB
	SandboxMetadataDB = diracx.db.sql:SandboxMetadataDB
	TaskQueueDB = diracx.db.sql:TaskQueueDB
	#DummyDB = diracx.db.sql:DummyDB
diracx.db.os =
	JobParametersDB = diracx.db.os:JobParametersDB
diracx.services =
	jobs = diracx.routers.job_manager:router
	config = diracx.routers.configuration:router
	auth = diracx.routers.auth:router
	.well-known = diracx.routers.well_known:router
