[project]
name = "diracx-client"
description = "TODO"
readme = "README.md"
requires-python = ">=3.10"
keywords = []
license = {text = "GPL-3.0-only"}
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Distributed Computing",
]
dependencies = [
    "azure-core",
    "diracx-core",
    "isodate",
    "requests",
]
dynamic = ["version"]

[project.optional-dependencies]
testing = [
    "diracx-testing",
]
types = [
    "types-requests",
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61", "wheel", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
root = ".."

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-v",
    "--cov=diracx.client", "--cov-report=term-missing",
    "-pdiracx.testing",
    "--import-mode=importlib",
]
asyncio_mode = "auto"
