[project]
name = "diracx-core"
description = "Common code used by all DiracX packages"
readme = "README.md"
requires-python = ">=3.11"
keywords = []
license = {text = "GPL-3.0-only"}
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Distributed Computing",
]
dependencies = [
    "aiobotocore>=2.15",
    "authlib",
    "botocore>=1.35",
    "cachetools",
    "email_validator",
    "gitpython",
    "pydantic >=2.10",
    "pydantic-settings",
    "pyyaml",
    "sh",
]
dynamic = ["version"]

[project.optional-dependencies]
testing = [
    "diracx-testing",
    "moto[server]",
]
types = [
    "botocore-stubs",
    "types-aiobotocore[essential]",
    "types-aiobotocore-s3",
    "types-cachetools",
    "types-PyYAML",
]

[project.entry-points."diracx"]
properties_module = "diracx.core.properties"
config = "diracx.core.config.schema:Config"
extension = "diracx"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61", "wheel", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
root = ".."

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-v",
    "--cov=diracx.core", "--cov-report=term-missing",
    "-pdiracx.testing",
    "--import-mode=importlib",
]
asyncio_mode = "auto"
markers = [
    "enabled_dependencies: List of dependencies which should be available to the FastAPI test client",
]
