[project]
name = "diracx-logic"
description = "TODO"
readme = "README.md"
requires-python = ">=3.11"
keywords = []
license = {text = "GPL-3.0-only"}
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Distributed Computing",
]
dependencies = [
    "cachetools",
    "diraccommon >=9.0.0a67",
    "diracx-core",
    "diracx-db",
    "joserfc",
    "pydantic >=2.10",
    "uuid-utils",
]
dynamic = ["version"]

[project.optional-dependencies]
testing = ["diracx-testing", "freezegun"]
types = [
    "types-cachetools",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
root = ".."

[tool.hatch.build.targets.wheel]
packages = ["src/diracx"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-v",
    "--cov=diracx.logic", "--cov-report=term-missing",
    "-pdiracx.testing", "-pdiracx.testing.osdb",
    "--import-mode=importlib",
]
asyncio_mode = "auto"
