[project]
name = "diracx-testing"
description = "TODO"
readme = "README.md"
requires-python = ">=3.11"
keywords = []
license = {text = "GPL-3.0-only"}
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Distributed Computing",
]
dependencies = [
    "pytest",
    "pytest-asyncio==1.0.0",
    "pytest-cov",
    "pytest-xdist",
    "httpx",
    "joserfc",
    "uuid-utils",
    "pytest-github-actions-annotate-failures",
]
dynamic = ["version"]

[project.optional-dependencies]
testing = [
    "diracx-testing",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
root = ".."

[tool.hatch.build.targets.wheel]
packages = ["src/diracx"]
